Refactoring to allow for easier maintenance

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="col">
                     <div class="w-60 margin-center text-center margin-240-top">
                         <h1 id="time"></h1>
-                        <form name="searchForm" class="searchForm" method="GET"  action="javascript:searchForm()">
+                        <form name="searchForm" class="searchForm" method="GET" action="javascript:runQuery()">
                             <p>
                                 <i id="list-search" class="fa fa-question-circle"></i>
                                 <input class="searchInput" type="text" name="q" placeholder="tag:query" autofocus>
@@ -36,6 +36,7 @@
         </footer>
         <script type="text/javascript" src="public/js/lists.js"></script>
         <script type="text/javascript" src="public/js/firefoxabout.js"></script>
-        <script type="text/javascript" src="public/js/site.js"></script>
+        <script type="text/javascript" src="public/js/SearchQuery.js"></script>
+        <script type="text/javascript" src="public/js/startpage.js"></script>
     </body>
 </html>
