--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Home Page</title>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width", initial-scale=1>
 
         <link rel="stylesheet" href="public/css/main.css">
