--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>Home Page</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width-device-width", initial-scale=1>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0"/>
 
         <link rel="stylesheet" href="public/css/main.css">
         <link rel="stylesheet" href="public/css/site.css">
-        <link rel="stylesheet" href="public/font-awesome-4.5.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="public/font-awesome-4.6.3/css/font-awesome.min.css">
     </head>
     <body>
         <main>
@@ -17,7 +17,7 @@
                         <h1 id="time"></h1>
                         <form name="searchForm" class="searchForm" method="GET" action="javascript:runQuery()">
                             <p>
-                                <i id="list-search" class="fa fa-question-circle"></i>
+                                <span id="list-search" class="fa fa-question-circle"></span>
                                 <input class="searchInput" type="text" name="q" placeholder="tag:query" autofocus>
                             </p>
                         </form>
