--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id="bookmarks" class="col wrap-15"></div>
         </footer>
         <script type="text/javascript" src="public/js/lists.js"></script>
-        <script type="text/javascript" src="public/js/firefoxabout.js"></script>
+        <script type="text/javascript" src="public/js/protocols.js"></script>
         <script type="text/javascript" src="public/js/SearchQuery.js"></script>
         <script type="text/javascript" src="public/js/startpage.js"></script>
     </body>
