--- a/public/themes/themetwo/index.html
+++ b/public/themes/themetwo/index.html
@@ -18,14 +18,14 @@
                 <a href="#panel-top-right"><span class="icon fa fa-download"></span></a>
             </div>
             <div id="panel-top-left" class="panel w-50 background2">
-                <a href="#">Close</a>
+                <a href="#"><span class="fa fa-chevron-left"></span></a>
             </div>
             <!-- right panel -->
             <div id="header-right" class="col w-50 right text-center background2">
                 <a href="#panel-top-left"><span class="icon fa fa-linux"></span></a>
             </div>
             <div id="panel-top-right" class="panel w-50 background1">
-                <a href="#">Close</a>
+                <a href="#"><span class="fa fa-chevron-right"></span></a>
             </div>
         </header>
         <main class="row text-center">
@@ -57,7 +57,7 @@
                 <a href="#panel-bottom-right"><span class="icon fa fa-code"></span></a>
             </div>
             <div id="panel-bottom-left" class="panel w-50 background4">
-                <a href="#">Close</a>
+                <a href="#"><span class="fa fa-chevron-left"></span></a>
             </div>
             <!-- right panel -->
             <div id="footer-right" class="col w-50 right text-center background4">
@@ -65,7 +65,7 @@
             </div>
             <div id="panel-bottom-right" class="text-center panel w-50
                 background3">
-                <a href="#">Close</a>
+                <a href="#"><span class="fa fa-chevron-right"></span></a>
             </div>
         </footer>
         <!-- the following are required in this exact order -->
