Changed naming of bookmark lists to generic naming convention

--- a/public/themes/themeone/index.html
+++ b/public/themes/themeone/index.html
@@ -20,22 +20,22 @@
             <div class="col w-100 wrap-60-bottom text-center">
                 <ul id="bookmark-icons">
                     <li>
-                        <a href="#Tor" title="Torrents">
+                        <a href="#bl-0" title="Torrents">
                             <img src="public/img/icons/torrent-125.png">
                         </a>
                     </li>
                     <li>
-                        <a href="#Lin" title="Linux">
+                        <a href="#bl-1" title="Linux">
                             <img src="public/img/icons/linux_tux-125.png">
                         </a>
                     </li>
                     <li>
-                        <a href="#Res" title="Resources">
+                        <a href="#bl-2" title="Resources">
                             <img src="public/img/icons/resources-125.png">
                         </a>
                     </li>
                     <li>
-                        <a href="#Soc" title="Social Media">
+                        <a href="#bl-3" title="Social Media">
                             <img src="public/img/icons/social-media-125.png">
                         </a>
                     </li>
